removing
- synchronized methods
- support for method-level testng parallelization (unused feature)
- threadlocal webdriver

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>